data/derived/fa15/progs/unify/prog0751.ml.out
Characters 140-154:
  |Average (e,f) -> (((eval (e,x,y)) + (eval (f,x,y)))/2)
                      ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
